// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CCMovelMultSignRequest 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  CCMovelMultSignRequest
  : 
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    200
  </span>
   
  User does not have signature active
</span>
`;

exports[`Test CCMovelSign 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  CCMovelSign
  : 
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    200
  </span>
   
  User does not have signature active
</span>
`;

exports[`Test GetCertificate 1`] = `
<span
  style={
    Object {
      "flexDirection": "row",
    }
  }
  unstable__transformChildren={[Function]}
>
  GetCertificate
  : 
  <span
    style={
      Object {
        "flexDirection": "row",
      }
    }
    unstable__transformChildren={[Function]}
  >
    200
  </span>
   
</span>
`;
